# ChangeLog for gentoo-src/stager
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/ChangeLog,v 1.2 2003/09/09 14:21:56 zhen Exp $

  09 September 2003; John Davis <zhen@gentoo.org>: Initial import of hardened stager.
  I am forking this from the original stager code in order to better fit our needs.
  The original stager code is still used by Gentoo, and is maintained by Daniel Robbins <drobbins@gentoo.org>.
  I would like to thank him and the rest of the contributors that coded stager.
