@@ -1,4 +1,4 @@
-# Advanced stager instructions
+# Catalyst (Hardened Stager) instructions
 # by drobbins@gentoo.org, 03 Jun 2003
 # updated, 09 Jul 2003
 
