@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/bin/Attic/catalyst,v 1.2 2003/09/09 14:21:56 zhen Exp $
+# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/bin/Attic/catalyst,v 1.3 2003/09/10 15:05:37 zhen Exp $
 
 # please note that you SHOULD not tinker with variables in here unless
 # you ABSOLUTELY know what you are doing. Please use files/catalyst.conf instead.
@@ -300,7 +300,7 @@ case "${1}" in
 				CFLAGS="$CFLAGS -fprefetch-loop-arrays"
 				;;
 		esac
-	;;
+		;;
 	
 	ppc|g3|g4 )
 		MAINARCH="ppc"
@@ -313,7 +313,7 @@ case "${1}" in
 		then
 			CFLAGS="-O2 -mcpu=7400 -maltivec -mabi=altivec -mpowerpc-gfxopt -fsigned-char"
 		fi
-	;;
+		;;
 	
 	sparc|sparc64 )
 		MAINARCH="${1}"
@@ -325,13 +325,13 @@ case "${1}" in
 		else
 			CFLAGS="-O3 -mcpu=ultrasparc -mtune=ultrasparc"
 		fi
-	;;
+		;;
 	
 	mips )
 		MAINARCH="mips"
 		CHOST="mips-unknown-linux-gnu"
 		CFLAGS="-O2"
-	;;
+		;;
 	
 	alpha|ev4|ev5|ev56|pca56|ev6|ev67 )
 		MAINARCH="alpha"
@@ -344,7 +344,7 @@ case "${1}" in
 			CHOST="alpha${1}-linux-gnu"
 			CFLAGS="-O3 -mcpu=${1}"
 		fi
-	;;
+		;;
 
 	* )
 		usage
@@ -438,7 +438,7 @@ case ${2} in
 			emerge --oneshot --nodeps ccache || exit 1
 		fi
 		emerge --oneshot --nodeps hardened-gcc || exit 1
-		${BASEDIR}/bin/bootstrap.sh || exit 1
+		${BASEDIR}/bin/hardened-bootstrap.sh || exit 1
 EOF
 		[ $? -ne 0 ] && die "Stage 2 build failure"
 	;;
