@@ -7,17 +7,10 @@ case $1 in
 		# now, we fix the default make.profile symlink to be in line with the current profile being used.
 		cd /etc
 		rm -f make.profile
-		if [ -n ${BUILD_HARDENED} ]
-		then
-			ln -sf ../usr/portage/profiles/hardened-${MAINARCH}-${MAINVERSION} make.profile
-		else
-			ln -sf ../usr/portage/profiles/default-${MAINARCH}-${MAINVERSION} make.profile
-		fi
-		# <zhen@gentoo.org> getting ready ..
-		if [ -n ${BUILD_HARDENED} ]
-		then
-			emerge --oneshot --nodeps --usepkg --buildpkg --noreplace hardened-gcc || exit 1
-		fi
+		
+		ln -sf ../usr/portage/profiles/hardened-${MAINARCH}-${MAINVERSION} make.profile
+		emerge --oneshot --nodeps --usepkg --buildpkg --noreplace hardened-gcc || exit 1
+		
 		if [ -n ${CCACHE} ]
 		then
 			emerge --oneshot --nodeps --usepkg --buildpkg --noreplace ccache || exit 1
@@ -33,12 +26,7 @@ case $1 in
 
 	clean)
 		export ROOT=${2}
-		keepers="sys-kernel/linux-headers sys-devel/binutils sys-devel/gcc sys-apps/baselayout sys-libs/glibc virtual/glibc virtual/kernel"
-
-		if [ -n ${BUILD_HARDENED} ]
-		then
-			keepers="${keepers} sys-devel/hardened-gcc"
-		fi
+		keepers="sys-kernel/linux-headers sys-devel/binutils sys-devel/hardened-gcc sys-devel/gcc sys-apps/baselayout sys-libs/glibc virtual/glibc virtual/kernel"
 		
 		# set everything to uid 999 (nouser)
 		cd ${ROOT}
