@@ -1,6 +1,15 @@
 # ChangeLog for gentoo-src/stager
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/ChangeLog,v 1.2 2003/09/09 14:21:56 zhen Exp $
+# $Header: /var/cvsroot/gentoo/users/zhen/catalyst/ChangeLog,v 1.3 2003/09/10 15:05:37 zhen Exp $
+
+  10 Sep 2003; <zhen@gentoo.org> README.catalyst, README.stager, bin/catalyst,
+  bin/hardened-bootstrap.sh, bin/stage1:
+  I renamed README.stager to README.catalyst and have made some very minor
+  changes to it. bin/bootstrap.sh has been renamed to bin/hardened-bootstrap.sh.
+  I have hacked bootstrap to use the hardened profile, as well as utilize
+  hardened-gcc. bin/catalyst itself has undergone some more changes (nothing too
+  major). Additionally, bin/stage1 has been hacked to accept the hardened profile,
+  and use hardened-gcc.
 
   09 September 2003; John Davis <zhen@gentoo.org>: Initial import of hardened stager.
   I am forking this from the original stager code in order to better fit our needs.
